- fixed handling of case-sensitive file names
- fixed unexpected errors with the stream when handling static files
- added support for `.webmanifest` file extension
- fixed sending mail attachments
- fixed creating an empty object according to the nested JSON schema
- added a new JSON Schema type `DataURI2` that keeps a value as text

========================
0.0.14
========================

- fixed loading plugin files (only `.js` files will load)
- removed loading of `.DS_STORE` files in plugins
- added watcher for `extensions/*.html` files
- __breaking change__: the audit logs object has been changed:
	- `username` renamed to `createdby`
	- `schema` renamed to `action`
- disabled auto-cleaning files in FlowStream workers
- improved loading static files in release mode
- added support for `HEAD` method
- fixed file routing
- added support for handling specific file extensions in the form `ROUTE('FILE *.php', ...)`
- improved parsing `<links>` in the markdown parser
- fixed a check of the file body for JPEG files during the upload process
- added `/version` file that can contain a version
- fixed language in the `TEMPLATE`

========================
0.0.13
========================

- added auto script loader for `extensions` directory
- added auto script loader for `transforms` directory
- added support for Python scripts in the `pypelines` folder
- added `PYPELINE(name, [options])` method starts a python process
- added support for custom View engine helpers `DEF.helpers.myhelper`
- fixed killing workers and pypelines
- added a feature that kills worker flow instances when the main process is terminated
- extended `Total.readfile(path, [type])` by adding a new type `datauri`
- fixed returing collections from the `HTMLParser.find()` method
- added `extend:String` option in `NEWACTION()` method
- added `FILECACHE(id, expire, callback, maker, encoding)` method
- fixed linking errors with the resource files